add user modal html

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e9ebfa; }
+  background: #259ee9; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ce09c8; }
+  background: #1c4612; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9e2e16; }
+  background: #1c5259; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #e348c2; }
+  background: #a935f3; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ddc4e2; }
+  background: #ad1aca; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #82b105; }
+  background: #cfeae7; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a6a965; }
+  background: #95635a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #ee2cbf; }
+  background: #d289ad; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #faf15c; }
+  background: #6af5bb; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8ff076; }
+  background: #c9d45d; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #db8b19; }
+  background: #019c51; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #027047; }
+  background: #7068cb; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #100d44; }
+  background: #738d61; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #455f0c; }
+  background: #962b4f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a18143; }
+  background: #8f7963; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #da0856; }
+  background: #378c95; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #cdbb0f; }
+  background: #df9873; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #0568fe; }
+  background: #bc5f2f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #1cab81; }
+  background: #dc5720; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b594c5; }
+  background: #7c857c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #6994ad; }
+  background: #20f188; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #cf3408; }
+  background: #ac7b39; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #1ade95; }
+  background: #ca8798; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #0c9bdc; }
+  background: #786048; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a1b86b; }
+  background: #2c3282; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1fc002; }
+  background: #92ef43; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #8ea908; }
+  background: #1c1313; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5c5554; }
+  background: #9aa4d4; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #6683ef; }
+  background: #187e05; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #6e8d96; }
+  background: #e00540; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d2c4dc; }
+  background: #695469; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #074d8e; }
+  background: #f6c027; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #751a03; }
+  background: #ef22ba; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #89c8cb; }
+  background: #e53b05; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #dadcd2; }
+  background: #24c2e4; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #49e408; }
+  background: #542b41; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a087c0; }
+  background: #54f24f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #745ade; }
+  background: #0abd5e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #84f996; }
+  background: #d3a315; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #2f86f6; }
+  background: #30086c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #2b28e8; }
+  background: #939a84; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #607c2e; }
+  background: #214405; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c1f338; }
+  background: #256c55; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #8ec371; }
+  background: #593dbb; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c616db; }
+  background: #1ae2e5; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #837615; }
+  background: #f83838; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #3d78bc; }
+  background: #7ae8db; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #081f33; }
+  background: #aea2e0; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #0a3dca; }
+  background: #17664c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #cc4b35; }
+  background: #a4ad95; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #5a72f8; }
+  background: #e995e1; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #8e51e9; }
+  background: #ea0803; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #cae772; }
+  background: #5b1592; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #e65b81; }
+  background: #67d386; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #b1a938; }
+  background: #20089f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #ccdf6c; }
+  background: #d7d615; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #099ff8; }
+  background: #7b325a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ead5f8; }
+  background: #6eec0f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #89e8dd; }
+  background: #25f194; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #07aeff; }
+  background: #77940d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ba2c96; }
+  background: #215ded; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #634631; }
+  background: #33b7b7; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #b8b830; }
+  background: #e83eac; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #617f7b; }
+  background: #68aa40; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #d7f640; }
+  background: #8b221a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #611996; }
+  background: #aa157e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #48c381; }
+  background: #465f50; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #0e04a4; }
+  background: #1d11a1; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #7aff0e; }
+  background: #dd550d; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #892ea8; }
+  background: #1addd4; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #856abd; }
+  background: #cd8a46; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #afda29; }
+  background: #d7958b; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #38b362; }
+  background: #08679e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #6caf24; }
+  background: #ba19fe; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a79c4b; }
+  background: #73da9b; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #d70abd; }
+  background: #5d841b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #951783; }
+  background: #32681f; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #22a316; }
+  background: #f5985d; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #fb458e; }
+  background: #f24230; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #8d014e; }
+  background: #de6ddd; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #4a776d; }
+  background: #711f05; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #29ce0e; }
+  background: #9d2709; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #dfd329; }
+  background: #1b8b6a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d53551; }
+  background: #7d6037; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #bb66ad; }
+  background: #20d658; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #5e8c67; }
+  background: #50c8c5; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #abec13; }
+  background: #4d2235; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #959e30; }
+  background: #2fe41d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d2f062; }
+  background: #254dff; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #776421; }
+  background: #7d9944; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #41917c; }
+  background: #f2cd94; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6a262c; }
+  background: #ff63a4; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #5092d3; }
+  background: #e73df1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #7c41fb; }
+  background: #0ed37e; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #3f8ad5; }
+  background: #895940; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #346477; }
+  background: #b2fb74; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #ab1b25; }
+  background: #c6b7a5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8f4d11; }
+  background: #10a508; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #aba788; }
+  background: #5df164; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #1de77a; }
+  background: #4742fc; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12022,8 +12022,8 @@ input:checked + .sliderss .off {
 
 .not-white-bg,
 .not-blue-bg {
-  color: #fff;
-  background-color: #776fff;
+  color: #776fff;
+  background-color: #fff;
   border: 2px solid #776fff;
   padding: 8px;
   border-radius: 25px;
@@ -12035,8 +12035,8 @@ input:checked + .sliderss .off {
 
 input:checked + .sliders-Not .not-white-bg {
   display: block;
-  color: #776fff;
-  background-color: #fff;
+  color: #fff;
+  background-color: #776fff;
   border: 2px solid #776fff;
   font-size: 12px; }
 
@@ -12214,6 +12214,9 @@ input:checked + .sliders-Not .not-blue-bg {
 td .check-container {
   margin: 3px 0px 0px 0px;
   padding: 0px; }
+
+.add-user-modal input[type="password"] {
+  padding: 9px 16px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -12453,7 +12456,16 @@ td .check-container {
     left: 48%; }
 
   .save-queries-wrapper .search-wrap input {
-    margin-right: 0px; } }
+    margin-right: 0px; }
+
+  .add-user-modal .adding-adapter-modal-header {
+    flex-direction: row-reverse;
+    margin-top: 2px; }
+  .add-user-modal .adapter-modal-name {
+    margin-top: 0px !important;
+    text-align: left !important; }
+  .add-user-modal .adapter-modal-help-box {
+    margin-bottom: 0px !important; } }
 /*767 screen end here*/
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .query-wizard-exp-contents {
